# chess-for-crabs

./: Cargo.toml
bench/: eval_bench.rs
games/: game_1.pgn  game_10.pgn  game_100.pgn  game_11.pgn  game_12.pgn  game_13.pgn  game_14.pgn  game_15.pgn  game_16.pgn  game_17.pgn  game_18.pgn  game_19.pgn  game_2.pgn  game_20.pgn  game_21.pgn  game_22.pgn  game_23.pgn  game_24.pgn  game_25.pgn  game_26.pgn  game_27.pgn  game_28.pgn  game_29.pgn  game_3.pgn  game_30.pgn  game_31.pgn  game_32.pgn  game_33.pgn  game_34.pgn  game_35.pgn  game_36.pgn  game_37.pgn  game_38.pgn  game_39.pgn  game_4.pgn  game_40.pgn  game_41.pgn  game_42.pgn  game_43.pgn  game_44.pgn  (+60 more)
src/: args.rs  bitboard.rs  board.rs  coords.rs  eval.rs  fen.rs  game.rs  gen.rs  lib.rs  main.rs  move_log.rs  moves.rs  patterns.rs  piece.rs  search.rs  types.rs  utils.rs
tests/: positions.rs
